--- a/html_advanced/9-index.html
+++ b/html_advanced/9-index.html
@@ -22,9 +22,9 @@
             <article>Work 2</article>
             <article>Work 3</article>
         </section>
-        <section><h2>About us</h2></section>
+        <section><h2>About Us</h2></section>
         <section>
-            <h2>Lastest news</h2>
+            <h2>Latest news</h2>
             <article>Article 1</article>
             <article>Article 2</article>
             <article>Article 3</article>
