--- a/html_advanced/12-index.html
+++ b/html_advanced/12-index.html
@@ -53,9 +53,7 @@
             <article>
                 <p>Carreer</p>
                 <h3>Hoc loco tenere se Triarius non potuit.</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                    Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; 
-                    Quae contraria sunt his, malane?</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
             </article>
             <article>
                 <p>Digital Life</p>
