--- a/html_advanced/17-index.html
+++ b/html_advanced/17-index.html
@@ -62,7 +62,7 @@
             </div>
         </section>
         <br>
-    <!-- About us section -->
+    <!-- About Us section -->
         <section>
             <div>
                 <header>
