--- a/html_advanced/22-index.html
+++ b/html_advanced/22-index.html
@@ -95,7 +95,7 @@
                         deserunt ducimus quidem iste dicta quibusdam atque maxime cum!
                     </p>
                 </div>
-                <a href="./about.html">Learn more about us</a>
+                <a href="about.html">Learn more about us</a>
             </div>
         </section>
         <br>
@@ -159,8 +159,8 @@
                         Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?
                     </p>
                 </div>
+                <a href="contact.html">Get in touch</a>
             </div>
-            <a href="./contact.html">Get in touch</a>
         </section>
     </main>
     <br>
