--- a/html_advanced/29-index.html
+++ b/html_advanced/29-index.html
@@ -148,9 +148,9 @@
                     <p>We are more than a digital company</p>
                 </header>
                 <div>
-                    <article><blockquote><p>I am completely blown away. Thanks to Techium, we've just launched our 5th website!</p><cite>Yuri Y.</cite></blockquote></article>
-                    <article><blockquote><p>Thank you so much for your help. Techium company is awesome!</p></blockquote><cite>Dorrie S.</cite></article>
-                    <article><blockquote><p>I love your system. Definitely worth the investment. I'd be lost without Techium company.</p></blockquote><cite>Sven H.</cite></article>
+                    <article><blockquote>I am completely blown away. Thanks to Techium, we've just launched our 5th website!</blockquote><cite>Yuri Y.</cite></article>
+                    <article><blockquote>Thank you so much for your help. Techium company is awesome!</blockquote><cite>Dorrie S.</cite></article>
+                    <article><blockquote>I love your system. Definitely worth the investment. I'd be lost without Techium company.</blockquote><cite>Sven H.</cite></article>
                 </div>
             </div>
         </section>
