--- a/html_advanced/32-styleguide.html
+++ b/html_advanced/32-styleguide.html
@@ -89,6 +89,7 @@
                 </blockquote>
             </div>
         </section>
+        <!-- Typography -->
         <section>
             <header>
                 <h2>Typography</h2>
