--- a/html_advanced/34-styleguide.html
+++ b/html_advanced/34-styleguide.html
@@ -157,13 +157,14 @@
                     <summary>Show/Hide me</summary>
                     Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
                 </details>
-                <div>
-                    <details>
-                        <summary>ALways open</summary>
-                        Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
-                    </details>
-                </div>
             </div>
+            <div>
+                <h3>Open</h3>
+                <details>
+                    <summary>Always open</summary>
+                    Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+                </details>
+            </div>  
         </section>
     </main>
     <footer></footer> 
