--- a/html_advanced/35-index.html
+++ b/html_advanced/35-index.html
@@ -200,7 +200,7 @@
     <br>
 <!-- Footer -->
     <footer>
-        <img src="logo-black.png" alt="Techium logo">
+        <img src="logo-black.png" alt="Techium logo" width="160" height="40">
         <address>234 Washington Street<br>Urbana, Illinois</address>
         <div>
             <ul>
