--- a/html_advanced/36-index.html
+++ b/html_advanced/36-index.html
@@ -126,7 +126,7 @@
                 <div>
                     <article>
                         <div>
-                            <img src="images/pic-blog-01.jpeg" alt="" width="305" height="205">
+                            <img src="images/pic-blog-01.jpg" alt="" width="305" height="205">
                         </div>
                         <p>Career</p>
                         <h3><a href="#">Hoc loco tenere se Triarius non potuit.</a></h3>
@@ -136,7 +136,7 @@
                     </article>
                     <article>
                         <div>
-                            <img src="images/pic-blog-02.jpeg" alt="" width="305" height="205">
+                            <img src="images/pic-blog-02.jpg" alt="" width="305" height="205">
                         </div>
                         <p>Digital Life</p>
                         <h3><a href="#">Ut alios omittam, hunc appello, quem ille unum secutus est.</a></h3>
@@ -148,7 +148,7 @@
                     </article>
                     <article>
                         <div>
-                            <img src="images/pic-blog-03.jpeg" alt="" width="305" height="205">
+                            <img src="images/pic-blog-03.jpg" alt="" width="305" height="205">
                         </div>
                         <p>Social</p>
                         <h3><a href="#">Bestiarum vero nullum iudicium puto.</a></h3>
