--- a/html_advanced/styleguide.html
+++ b/html_advanced/styleguide.html
@@ -193,7 +193,7 @@
                 <h2>Iframe</h2>
             </header>
             <div>
-                <iframe src="https://www.youtube.com/embed/41N6bKO-NVI" frameborder="0" width="350" height="200" >
+                <iframe src="https://www.youtube.com/embed/41N6bKO-NVI" title="Holberton School" frameborder="0" width="350" height="200" >
                     <p>Holberton Sally</p>
                 </iframe>
             </div>
